# libgtkflow

./: .gitignore  .gitlab-ci.yml  Makefile.am  README.md  configure.ac  flake.nix  meson.build  meson_options.txt  shell.nix
debian/: changelog  commit  control  copyright  gir1.2-gflow-0.8.install  gir1.2-gflow-1.0.install  gir1.2-gtkflow-0.8.install  gir1.2-gtkflow3-1.0.install  gir1.2-gtkflow4-0.2.install  libgflow-0.2-1.install  libgflow-0.2-dev.install  libgflow-0.8-dev.install  libgflow-0.8-doc.install  libgflow-0.8.install  libgflow-1.0-dev.install  libgflow-1.0-doc.install  libgflow-1.0.install  libgtkflow-0.2-1.install  libgtkflow-0.2-dev.install  libgtkflow-0.8-dev.install  libgtkflow-0.8-doc.install  libgtkflow3-1.0-dev.install  libgtkflow3-1.0-doc.install  libgtkflow3-1.0.install  libgtkflow4-0.2-dev.install  libgtkflow4-0.2.install  rules  watch
docs/: Makefile.am
docs/valadoc/: Makefile.am
docs/valadoc/devhelp/: Makefile.am
docs/valadoc/gtk-doc/: Makefile.am
examples/: advanced_calculator.py  advanced_calculator.vala  colors.py  custom_title.py  cycles.py  different_types.py  layout.py  minimal.c  minimal.lua  minimal.pl  minimal.vala  minimap.py  multisink.py  objects.py  scrolling_multidock.py
gtkflow4-demo/: main.vala  meson.build
libgflow/: Makefile.am  gflow-dock.vala  gflow-node.vala  gflow-simple-node.vala  gflow-simple-sink.vala  gflow-simple-source.vala  gflow-sink.vala  gflow-source.vala  gflow.vala  meson.build  namespace-info.vala.in
libgflowpatterns/: aggregator.vala  gflowpatterns-0.8.deps  meson.build
libgtkflow/: .gitignore  Makefile.am  default_node_renderer.vala  dock_renderer.vala  dockline_node_renderer.vala  drawinghelper.c  layout.vala  meson.build  minimap.vala  namespace-info.vala.in  node.vala  node_renderer.vala  nodeview.vala  sink.vala  source.vala
libgtkflow3/: .gitignore  meson.build  minimap.vala
libgtkflow4/: default_node_renderer.vala  dock.vala  dock_renderer.vala  dockline_node_renderer.vala  gtkflow4-0.10.deps  layout.vala  meson.build  minimap.vala  node.vala  node_renderer.vala  nodeview.vala
test/: Makefile.am  gflow-aggregator-test.vala  gflow-node-test.vala  gflow-sink-test.vala  gflow-source-test.vala  gflow-test.vala  gflowpatterns-aggregator-test.vala  gtkflow-node-test.vala  gtkflow-test-app-class.vala  gtkflow-test-app.vala  meson.build
test4/: main.vala
